--- a/gallery.html
+++ b/gallery.html
@@ -49,12 +49,22 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Products</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="product.html">All Products</a>
+              <a class="dropdown-item" href="charcoal-briquette.html">Charcoal Briquettes</a>
+              <a class="dropdown-item" href="coffee.html">Coffee</a>
+              <a class="dropdown-item" href="wood.html">Woods</a>
+            </div>
+          </li>
           <li class="nav-item active"><a href="#" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="faq.html" class="nav-link">FaQ</a></li>
-					<li class="nav-item"><a href="Paramartha Agro Brochure.pdf" class="nav-link" download="" target="_blank">Brochure</a></li>
+          <li class="nav-item"><a href="Paramartha Agro Brochure.pdf" class="nav-link" download=""
+              target="_blank">Brochure</a></li>
         </ul>
       </div>
     </div>
@@ -234,6 +244,54 @@
             </a>
           </div>
         </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+            <img src="images/wood1.jpg" class="img-fluid" alt="Colorlib Template">
+            <div class="text">
+              <span>Best</span>
+              <h3><a href="project.html">Woods</a></h3>
+            </div>
+            <a href="images/wood1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+              <span class="icon-expand"></span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+            <img src="images/wood2.jpg" class="img-fluid" alt="Colorlib Template">
+            <div class="text">
+              <span>Legal</span>
+              <h3><a href="project.html">Woods</a></h3>
+            </div>
+            <a href="images/wood2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+              <span class="icon-expand"></span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+            <img src="images/wood3.jpg" class="img-fluid" alt="Colorlib Template">
+            <div class="text">
+              <span>Certified</span>
+              <h3><a href="project.html">Woods</a></h3>
+            </div>
+            <a href="images/wood3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+              <span class="icon-expand"></span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+            <img src="images/wood4.jpg" class="img-fluid" alt="Colorlib Template">
+            <div class="text">
+              <span>Custom</span>
+              <h3><a href="project.html">Woods</a></h3>
+            </div>
+            <a href="images/wood4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+              <span class="icon-expand"></span>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -289,13 +347,14 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br>   Bandung, Indonesia <br> 40294</span></li>
-								<li><a
+                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> Bandung,
+                    Indonesia <br> 40294</span></li>
+                <li><a
                     href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881 455 7018</span></a></li>
-								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
-											class="icon icon-envelope"></span><span
-											class="text">info@paramarthaagro.com</span></a></li>
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881 455 7018</span></a>
+                </li>
+                <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
+                      class="icon icon-envelope"></span><span class="text">info@paramarthaagro.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -340,8 +399,8 @@
   <script src="js/main.js"></script>
   <script src="js/joinchat.js"></script>
   <script src="js/jquery.min.js"></script>
-	<!-- Chat-->
-	<script async data-id="73207" src="https://cdn.widgetwhats.com/script.min.js"></script>
+  <!-- Chat-->
+  <script async data-id="73207" src="https://cdn.widgetwhats.com/script.min.js"></script>
 
 </body>
 
