--- a/product.html
+++ b/product.html
@@ -49,12 +49,22 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="#" class="nav-link">Products</a></li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Products</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="product.html">All Products</a>
+              <a class="dropdown-item" href="charcoal-briquette.html">Charcoal Briquettes</a>
+              <a class="dropdown-item" href="coffee.html">Coffee</a>
+              <a class="dropdown-item" href="wood.html">Woods</a>
+            </div>
+          </li>
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="faq.html" class="nav-link">FaQ</a></li>
-					<li class="nav-item"><a href="Paramartha Agro Brochure.pdf" class="nav-link" download="" target="_blank">Brochure</a></li>
+          <li class="nav-item"><a href="Paramartha Agro Brochure.pdf" class="nav-link" download=""
+              target="_blank">Brochure</a></li>
         </ul>
       </div>
     </div>
@@ -71,7 +81,8 @@
           <p style="color: white; font-weight: bolder;">Made with love from <span
               style="color: rgb(255, 52, 52);">Indonesia</span></p>
           <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolld">Coconut Charcoal
-                Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span>
+                Briquettes</a></span><br><span><a href="#wood" class="smoothscrolld">Custom Woods</a></span><br><span><a
+                href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span>
           </p>
         </div>
       </div>
@@ -134,7 +145,8 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
             <h2 class="mb-4">Catalogue</h2>
             <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolld">Coconut Charcoal
-                  Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span>
+                  Briquettes</a></span><br><span><a href="#wood" class="smoothscrolld">Custom
+                  Woods</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span>
             </p>
           </div>
         </div>
@@ -319,7 +331,8 @@
                       <li>Volatile Matter = less 14% </li>
                       <li>Lighting Time = 90 - 120 minutes </li>
                     </ul>
-                    <p class="button text-center"><span class="btn btn-primary px-4 py-3">Get Offer</span></p>
+                    <p class="button text-center"><span class="btn btn-primary px-4 py-3"><a
+                          href="charcoal-briquette.html" style="color: white;">Look Detail</a></span></p>
                   </div>
                 </div>
               </div>
@@ -330,6 +343,95 @@
       </div>
   </div>
   </section>
+  </div>
+
+  <div id="wood">
+    <section class="ftco-section">
+      <div class="container">
+        <div class="row justify-content-center pb-3">
+        </div>
+        <div class="row">
+          <div class="col-lg-6 mb-5 ftco-animate">
+            <a href="images/woo.jpg" class="image-popup prod-img-bg"><img src="images/woo.jpg" class="img-fluid"
+                alt="Colorlib Template"></a>
+          </div>
+          <div class="col-lg-6 product-details pl-md-5 ftco-animate">
+            <h3
+              style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
+              Custom Woods</h3>
+            <p>Indonesia is one of the largest timber producing countries in the world. Most of Indonesia's timber
+              products are obtained from tropical forests located in the islands of Sumatra, Kalimantan and Papua.</p>
+            <p id="atasi">Indonesia is a warehouse of various world class timbers. The climate and soil are supportive
+              for the fertility of a variety of vegetation, providing many variants of good hardwood and veins. Each
+              type of wood has certain physical properties that determine the quality and usefulness of the wood. The
+              physical properties of wood include soft (softwood) and hard (hardwood).
+            </p>
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-12 nav-link-wrap">
+            <div class="nav nav-pills d-flex text-center" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+              <a class="nav-link ftco-animate active mr-lg-1" id="v-pills-4-tab" data-toggle="pill" href="#v-pills-4"
+                role="tab" aria-controls="v-pills-4" aria-selected="true">Description</a>
+              <a class="nav-link ftco-animate mr-lg-1" id="v-pills-5-tab" data-toggle="pill" href="#v-pills-5"
+                role="tab" aria-controls="v-pills-5" aria-selected="false">Wood Type</a>
+            </div>
+          </div>
+          <div class="col-md-12 tab-wrap">
+
+            <div class="tab-content bg-light" id="v-pills-tabContent">
+
+              <div class="tab-pane fade show active" id="v-pills-4" role="tabpanel" aria-labelledby="day-4-tab">
+                <div class="p-4">
+                  <div class="row">
+                    <div class="col-md-12 ftco-animate">
+                      <div class="pricing-entry pb-5 text-center">
+                        <div>
+                          <h3 class="mb-4"
+                            style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
+                            Description</h3>
+                          <p>We have a splendid array of plywood applications beyond this list and accordingly ensure to
+                            deliver the right product at the right time and place.
+                            Your plywood solution starts with us.</p>
+                        </div>
+                        <p class="button text-center"><span class="btn btn-primary px-4 py-3"><a
+                          href="wood.html" style="color: white;">Look Detail</a></span></p>
+                      </div>
+                    </div>
+                  </div>
+                  <p><br></p>
+                </div>
+              </div>
+
+
+              <div class="tab-pane fade" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-day-5-tab">
+                <div class="p-4">
+                  <div class="row">
+                    <div class="col-md-12 ftco-animate">
+                      <div class="pricing-entry pb-5 text-center">
+                        <div>
+                          <p><span class="price">Our Woods</span></p>
+                        </div>
+                        <p>The types of wood we have are very diverse, ranging from meranti wood, rubber wood and sengon
+                          wood with the following variants:
+                        </p>
+                        <p>PLYWOOD</p>
+                        <P>LVL</P>
+                        <P>DECK</P>
+                        <P>DOOR</P>
+                        <P>ETC.</P>
+                        <p class="button text-center"><span class="btn btn-primary px-4 py-3"><a
+                          href="wood.html" style="color: white;">Look Detail</a></span></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
   </div>
 
   <div id="coffee">
@@ -350,9 +452,10 @@
               Vietnam and Colombia. Becoming one of the largest coffee producers is nothing new for Indonesia.
               Apparently, Indonesia's track record in the coffee industry has occurred since Indonesia was controlled by
               the Dutch colonialist, namely in 1696.</p>
-            <p id="atasi">So, it's no wonder that until now Indonesia has coffee production with an average of 639
+            <p id="atasin">So, it's no wonder that until now Indonesia has coffee production with an average of 639
               thousand tons
-              per year (72.84 percent). robusta coffee and 27.16 percent arabica coffee). <br> <br> We process every coffee is ORGANIC.
+              per year (72.84 percent). robusta coffee and 27.16 percent arabica coffee). <br> <br> We process every
+              coffee is ORGANIC.
             </p>
           </div>
         </div>
@@ -360,17 +463,17 @@
         <div class="row mt-5">
           <div class="col-md-12 nav-link-wrap">
             <div class="nav nav-pills d-flex text-center" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-              <a class="nav-link ftco-animate active mr-lg-1" id="v-pills-4-tab" data-toggle="pill" href="#v-pills-4"
-                role="tab" aria-controls="v-pills-4" aria-selected="true">Description</a>
-              <a class="nav-link ftco-animate mr-lg-1" id="v-pills-5-tab" data-toggle="pill" href="#v-pills-5"
-                role="tab" aria-controls="v-pills-5" aria-selected="false">Details</a>
+              <a class="nav-link ftco-animate active mr-lg-1" id="v-pills-6-tab" data-toggle="pill" href="#v-pills-6"
+                role="tab" aria-controls="v-pills-6" aria-selected="true">Description</a>
+              <a class="nav-link ftco-animate mr-lg-1" id="v-pills-7-tab" data-toggle="pill" href="#v-pills-7"
+                role="tab" aria-controls="v-pills-7" aria-selected="false">Process</a>
             </div>
           </div>
           <div class="col-md-12 tab-wrap">
 
             <div class="tab-content bg-light" id="v-pills-tabContent">
 
-              <div class="tab-pane fade show active" id="v-pills-4" role="tabpanel" aria-labelledby="day-4-tab">
+              <div class="tab-pane fade show active" id="v-pills-6" role="tabpanel" aria-labelledby="day-4-tab">
                 <div class="p-4">
                   <div class="row">
                     <div class="col-md-6 ftco-animate">
@@ -389,9 +492,9 @@
                             to the characteristics of Arabica coffee. Cultivation system, generally planted by
                             individual farmers in Perhutani's garden areas where there are protective trees.</p>
                         </div>
-                        <p class="button text-center"><a href="#atasi"
+                        <p class="button text-center"><a href="#atasin"
                             class="btn btn-primary px-4 py-3 smoothscrolld">Go
-                            to Spec.</a></p>
+                            to Process</a></p>
                       </div>
                     </div>
                     <div class="col-md-6 ftco-animate">
@@ -411,9 +514,9 @@
                             Productivity: 300 - 5000 Tons of green beans (Green Bean) per year.</p>
                           </p>
                         </div>
-                        <p class="button text-center"><a href="#atasi"
+                        <p class="button text-center"><a href="#atasin"
                             class="btn btn-primary px-4 py-3 smoothscrolld">Go
-                            to Spec.</a></p>
+                            to Process</a></p>
                       </div>
                     </div>
                   </div>
@@ -422,7 +525,7 @@
               </div>
 
 
-              <div class="tab-pane fade" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-day-5-tab">
+              <div class="tab-pane fade" id="v-pills-7" role="tabpanel" aria-labelledby="v-pills-day-5-tab">
                 <div class="p-4">
                   <div class="row">
                     <div class="col-md-6 ftco-animate">
@@ -432,11 +535,13 @@
                         </div>
                         <p>It is planted in highland areas with a minimum altitude of 900 meters above sea level (asl),
                           Mount Cikuray, Mount Papandayan, Mount Malabar, Mount Caringin, Mount Tilu, Mount Patuha,
-                          Mount Halu, Mount Beser, Mount Burangrang, Mount Tangkuban Perahu and Mount Manglayang <br> Harvest Period: May - August.
-                          <br> Productivity: 300 - 5000 Tons of green beans (Green Bean) per year.</p>
-                          <br>
-                        <p class="button text-center"><a href="#atasi"
-                            class="btn btn-primary px-4 py-3 smoothscrolld">Description</a></p>
+                          Mount Halu, Mount Beser, Mount Burangrang, Mount Tangkuban Perahu and Mount Manglayang <br>
+                          Harvest Period: May - August.
+                          <br> Productivity: 300 - 5000 Tons of green beans (Green Bean) per year.
+                        </p>
+                        <br>
+                        <p class="button text-center"><span class="btn btn-primary px-4 py-3"><a
+                          href="coffee.html" style="color: white;">Look Detail</a></span></p>
                       </div>
                     </div>
                     <div class="col-md-6 ftco-animate">
@@ -444,21 +549,24 @@
                         <div>
                           <p><span class="price">Processing System</span></p>
                         </div>
-                          <li>Processing Type: Organic, Natural, Honey, Fullwashed Dryhulling, Wethulling.</li>
-                          <li>Cultivation System: Generally planted by individual farmers in Perhutani's garden areas where there are already protective trees.</li>
-                          <li>Cupping Notes: Chocolate, Caramel, Nutty, Peach, Berry, Sweet, Floral, Lemony, Balance after taste. </li>
-                          <li>Varieties: Typica, S-795 (S-Lini), Sigararutang, Kartika, Catimor and Andung Sari, and a little yellow Catura in the Garut region.</li>
-                        <p class="button text-center"><a href="#atasi"
-                            class="btn btn-primary px-4 py-3 smoothscrolld">Description</a></p>
+                        <li>Processing Type: Organic, Natural, Honey, Fullwashed Dryhulling, Wethulling.</li>
+                        <li>Cultivation System: Generally planted by individual farmers in Perhutani's garden areas
+                          where there are already protective trees.</li>
+                        <li>Cupping Notes: Chocolate, Caramel, Nutty, Peach, Berry, Sweet, Floral, Lemony, Balance after
+                          taste. </li>
+                        <li>Varieties: Typica, S-795 (S-Lini), Sigararutang, Kartika, Catimor and Andung Sari, and a
+                          little yellow Catura in the Garut region.</li>
+                          <p class="button text-center"><span class="btn btn-primary px-4 py-3"><a
+                            href="coffee.html" style="color: white;">Look Detail</a></span></p>
+                      </div>
                     </div>
+                    <p><br></p>
                   </div>
-                  <p><br></p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
     </section>
   </div>
 
@@ -516,7 +624,8 @@
                     Indonesia <br> 40294</span></li>
                 <li><a
                     href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881 455 7018</span></a></li>
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881 455 7018</span></a>
+                </li>
                 <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
                       class="icon icon-envelope"></span><span class="text">info@paramarthaagro.com</span></a></li>
               </ul>
@@ -563,8 +672,8 @@
   <script src="js/main.js"></script>
   <script src="js/joinchat.js"></script>
   <script src="js/jquery.min.js"></script>
-	<!-- Chat-->
-	<script async data-id="73207" src="https://cdn.widgetwhats.com/script.min.js"></script>
+  <!-- Chat-->
+  <script async data-id="73207" src="https://cdn.widgetwhats.com/script.min.js"></script>
 
 </body>
 
