--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="col-lg-12 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
 						<span class="subheading">Welcome to Paramartha Agro</span>
-						<h1 class="mb-4">find your coconut charcoal briquettes <span
+						<h1 class="mb-4">find your charcoal briquette, woods <span
 								style="color: rgb(190, 145, 90);">&amp;</span> coffee here</h1>
 						<p><a href="product.html" class="btn btn-primary btn-outline-primary px-3 py-2">Products</a>
 							<a href="about.html" class="btn btn-primary btn-outline-primary px-3 py-2">About Us</a>
@@ -88,7 +88,7 @@
 					<div class="services-wrap d-flex align-items-center img"
 						style="background-image: url(images/formen.jpg);">
 						<div class="text">
-							<h3>Coconut Charcoal Briquettes</h3>
+							<h3>Charcoal Briquette</h3>
 							<p><a href="product.html" class="btn-custom">See details <span
 										class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -104,7 +104,7 @@
 						<h2
 							style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 20px; color: #4b4b4d;">
 							We just not sale, We Build Trust!</h2>
-						<p>A prosperous country called Indonesia which has a diversity of cultures, resources and
+						<p>Charcoal briquette, woods and coffee there are so many in a prosperous country called Indonesia which has a diversity of cultures, resources and
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
 							within is a very high quality and very attractive selling point.</p>
@@ -116,7 +116,7 @@
 					<div class="services-wrap d-flex align-items-center img"
 						style="background-image: url(images/forwomen.jpg);">
 						<div class="text">
-							<h3>Java Preanger Coffee</h3>
+							<h3>Woods and coffee</h3>
 							<p><a href="product.html" class="btn-custom">See details <span
 										class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -240,6 +240,60 @@
 						</a>
 					</div>
 				</div>
+
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="project">
+						<img src="images/wood1.jpg" class="img-fluid" alt="Colorlib Template">
+						<div class="text">
+							<span>Best</span>
+							<h3><a href="project.html">Woods</a></h3>
+						</div>
+						<a href="images/wood1.jpg"
+							class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-expand"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="project">
+						<img src="images/wood2.jpg" class="img-fluid" alt="Colorlib Template">
+						<div class="text">
+							<span>Legal</span>
+							<h3><a href="project.html">Woods</a></h3>
+						</div>
+						<a href="images/wood2.jpg"
+							class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-expand"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="project">
+						<img src="images/wood3.jpg" class="img-fluid" alt="Colorlib Template">
+						<div class="text">
+							<span>Certified</span>
+							<h3><a href="project.html">Woods</a></h3>
+						</div>
+						<a href="images/wood3.jpg"
+							class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-expand"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="project">
+						<img src="images/wood4.jpg" class="img-fluid" alt="Colorlib Template">
+						<div class="text">
+							<span>Custom</span>
+							<h3><a href="project.html">Woods</a></h3>
+						</div>
+						<a href="images/wood4.jpg"
+							class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-expand"></span>
+						</a>
+					</div>
+				</div>
+
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
 						<img src="images/work-5.jpg" class="img-fluid" alt="Colorlib Template">
