--- a/charcoal-briquette.html
+++ b/charcoal-briquette.html
@@ -130,7 +130,7 @@
 
 
 
-    <div id="charcoal">
+    <div id="atas">
         <section class="ftco-section">
             <div class="container">
                 <div class="row mt-5">
