--- a/about.html
+++ b/about.html
@@ -50,7 +50,16 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+						  aria-expanded="false">Products</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown04">
+						  <a class="dropdown-item" href="product.html">All Products</a>
+						  <a class="dropdown-item" href="charcoal-briquette.html">Charcoal Briquettes</a>
+						  <a class="dropdown-item" href="coffee.html">Coffee</a>
+						  <a class="dropdown-item" href="wood.html">Woods</a>
+						</div>
+					  </li>
 					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 					<li class="nav-item active"><a href="#" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -273,7 +282,7 @@
 					<div class="services-wrap d-flex align-items-center img"
 						style="background-image: url(images/forwomen.jpg);">
 						<div class="text">
-							<h3>Java Preanger Coffee</h3>
+							<h3>Woods and Coffee</h3>
 							<p><a href="product.html" class="btn-custom">See details <span
 										class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
