--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,16 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
+						  aria-expanded="false">Products</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown04">
+						  <a class="dropdown-item" href="product.html">All Products</a>
+						  <a class="dropdown-item" href="charcoal-briquette.html">Charcoal Briquettes</a>
+						  <a class="dropdown-item" href="coffee.html">Coffee</a>
+						  <a class="dropdown-item" href="wood.html">Woods</a>
+						</div>
+					  </li>
 					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item active"><a href="#" class="nav-link">Contact</a></li>
