--- a/gallery.html
+++ b/gallery.html
@@ -292,6 +292,58 @@
             </a>
           </div>
         </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+              <img src="images/ply1.jpg" class="img-fluid" alt="Colorlib Template">
+              <div class="text">
+                  <span>Material</span>
+                  <h3><a href="project.html">Furniture</a></h3>
+              </div>
+              <a href="images/ply1.jpg"
+                  class="icon image-popup d-flex justify-content-center align-items-center">
+                  <span class="icon-expand"></span>
+              </a>
+          </div>
+      </div>
+      <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+              <img src="images/ply2.jpg" class="img-fluid" alt="Colorlib Template">
+              <div class="text">
+                  <span>Secondary</span>
+                  <h3><a href="project.html">Process</a></h3>
+              </div>
+              <a href="images/ply2.jpg"
+                  class="icon image-popup d-flex justify-content-center align-items-center">
+                  <span class="icon-expand"></span>
+              </a>
+          </div>
+      </div>
+      <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+              <img src="images/ply3.jpg" class="img-fluid" alt="Colorlib Template">
+              <div class="text">
+                  <span>Wood</span>
+                  <h3><a href="project.html">Floor</a></h3>
+              </div>
+              <a href="images/ply3.jpg"
+                  class="icon image-popup d-flex justify-content-center align-items-center">
+                  <span class="icon-expand"></span>
+              </a>
+          </div>
+      </div>
+      <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+              <img src="images/ply4.jpg" class="img-fluid" alt="Colorlib Template">
+              <div class="text">
+                  <span>Film</span>
+                  <h3><a href="project.html">Faced</a></h3>
+              </div>
+              <a href="images/ply4.jpg"
+                  class="icon image-popup d-flex justify-content-center align-items-center">
+                  <span class="icon-expand"></span>
+              </a>
+          </div>
+      </div>
       </div>
     </div>
   </section>
